exports[`Image renders with defaultProps 1`] = `
<img
  className="ax-image"
  onError={undefined}
  src="/image.png" />
`;

exports[`Image renders with extra props 1`] = `
<img
  alt="Lorem"
  className="ax-image"
  onError={undefined}
  src="/image.png"
  title="Lorem" />
`;
